--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 serenity = "0.10.9"
 songbird = "0.2.0"
+tracing = "0.1.29"
+tracing-subscriber = "0.3.4"
 
 [dependencies.lavalink-rs]
 version = "0.9.0-rc"
