--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,32 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity = "0.10.9"
+dotenv = "0.15"
 songbird = "0.2.0"
+tracing = "0.1.29"
+tracing-subscriber = "0.3.4"
 
-[dependencies.lavalink-rs]
-version = "0.9.0-rc"
-default-features = false
+[dependencies.tokio]
+version = "1.15.0"
 features = [
-    "rustls",
-    "songbird",
-    "serenity"
+    "macros",
+    "rt-multi-thread",
+    "signal"
 ]
 
-[dependencies.poise]
-git = "https://github.com/kangalioo/poise"
-branch = "master"
+[dependencies.serenity]
+version = "0.10.9"
+features = ["framework"]
+
+#[dependencies.lavalink-rs]
+#version = "0.9.0-rc"
+#default-features = false
+#features = [
+#    "rustls",
+#    "songbird",
+#    "serenity"
+#]
+
+#[dependencies.poise]
+#git = "https://github.com/kangalioo/poise"
+#branch = "master"
