--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 dotenv = "0.15"
 songbird = "0.2.0"
 tracing = "0.1.29"
+tracing-log = "0.1.2"
 tracing-subscriber = "0.3.4"
 
 [dependencies.tokio]
@@ -21,16 +22,16 @@ features = [
 
 [dependencies.serenity]
 version = "0.10.9"
-features = ["framework"]
+features = ["framework", "client", "voice", "cache"]
 
-#[dependencies.lavalink-rs]
-#version = "0.9.0-rc"
-#default-features = false
-#features = [
-#    "rustls",
-#    "songbird",
-#    "serenity"
-#]
+[dependencies.tokio]
+version = "1.15.0"
+features = [
+    "rustls",
+    "songbird",
+    "serenity",
+    "tracing-log"
+]
 
 #[dependencies.poise]
 #git = "https://github.com/kangalioo/poise"
