--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,20 @@ tracing = "0.1.29"
 tracing-log = "0.1.2"
 tracing-subscriber = "0.3.4"
 
+[dependencies.tokio]
+version = "1.15.0"
+features = [
+    "macros",
+    "rt-multi-thread",
+    "signal"
+]
+
 [dependencies.serenity]
 version = "0.10.9"
 features = ["framework", "client", "voice", "cache"]
 
-[dependencies.tokio]
-version = "1.15.0"
+[dependencies.lavalink-rs]
+version = "0.9.0-rc"
 features = [
     "rustls",
     "songbird",
