[docs] add example for Lavalink server password
add an example for Lavalink server password environment variable.

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@
 # environment variables are separated by new lines and without
 # spaces around the equals sign.
 DISCORD_TOKEN=<TOKEN>
+LAVALINK_PASSWORD=<PASSWORD>
 RUST_LOG=debug
