--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ twilight-gateway = "0.14.0"
 twilight-http = "0.14.0"
 twilight-model = "0.14.0"
 twilight-interactions = "0.14.0"
+twilight-lavalink = "0.14.0"
+twilight-standby = "0.14.0"
 tokio = { version = "1.22.0", features = ["full"] }
 futures = "0.3.25"
 dotenv = "0.15.0"
@@ -18,3 +20,4 @@ anyhow = "1.0.66"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 tracing-futures = "0.2.5"
+hyper = "0.14.23"
